--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
-<!-- Mirrored from www.vincentsitzmann.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Aug 2022 17:06:37 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
-    <title>Vincent Sitzmann</title>
+    <title>Landon Butler</title>
 
     <!-- Meta tags -->
     <meta charset="utf-8">
@@ -93,7 +91,7 @@
 
                 <div class="col">
                   <div id='header-text-name'>
-                      Vincent Sitzmann
+                      Landon Butler
                   </div>
                     <div id='header-text-title'>
                         Assistant Professor </br>
@@ -143,257 +141,9 @@
                     deadline is December 15th 2022!
                 </p>
 
-<!--                <div class='vspace-top'>-->
-<!--                    <h1>News</h1>-->
-<!--                </div>-->
-
-<!--                &lt;!&ndash;- List of news -&#45;&#45;!>-->
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        March 2022-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--                        My group website is now online - check i to -->
-<!--                    </div>-->
-<!--                    -->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        June 2021-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--                        I am thrilled to announce that I will be joining MIT as tenure-track assistant professor in July-->
-<!--                        2022! My lab will investigate neural scene representations, inverse graphics,-->
-<!--                        neural rendering, and their applications in vision, graphics, robotics, and AI.-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        June 2021-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--                        I have created a slideshare account and will start uploading slides for some of my presentations-->
-<!--                        / talks / courses, starting with the slides for the introduction to novel view synthesis at SIGGRAPH-->
-<!--                        2021. Feel free to re-use them - I only ask that you keep some form of acknowledgement :) Find them-->
-<!--                        <a href="https://www.slideshare.net/VincentSitzmann/">here.</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        January 2021-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--		    	I published a <a href="https://github.com/vsitzmann/awesome-implicit-representations">-->
-<!--                        reading list on neural implicit representations</a> on github that I give students to get started in this area, inspired by the awesome-computer-vision list with extra commentary &amp; notes. Check it out!-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        January 2021-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--		    I am now serving as an academic advisor to <a href="https://preferred.jp/en/news/pr20210113/">Preferred Networks, Inc</a>!-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        June 2020-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--                        I just graduated Stanford with my <a href="docs/self_supervised_scene_rep_learning_vsitzmann.pdf">-->
-<!--                        thesis on Self-supervised Scene Representation Learning</a>. There's a few interesting thoughts in there - -->
-<!--                        especially check out the introduction and conclusion!-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        March 2020-->
-<!--                    </div>-->
-<!--                    <div class="col">-->
-<!--                        Our CVPR tutorial on Neural Rendering is on youtube, free to watch for everyone!-->
-<!--                        Here's the <a href="https://www.youtube.com/watch?v=LCTYRqW-ne8">link to the morning session</a> - -->
-<!--                        at 2:20:00, I'm giving an overview over Novel View Synthesis.-->
-<!--                        Here's the <a href="https://www.youtube.com/watch?v=JlyGNvbGKB8">link to the afternoon session</a>.-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        November 2019-->
-<!--                    </div>-->
-
-<!--                    <div class="col">-->
-<!--		    	Our paper "Scene Representation Networks: Continuous 3D-Structure-Aware Neural Scene Representations" wins an honorable mention for "Outstanding New Directions" at NeurIPS 2019! Watch my talk <a href="https://slideslive.com/38921749/track-1-session-3">here</a>.-->
-<!--                    </div>-->
-<!--                </div>-->
-
-
-<!--                <div class='row vspace-top-news'>-->
-<!--                    <div class="col-sm-2 news-date">-->
-<!--                        May 2019-->
-<!--                    </div>-->
-
-<!--                    <div class="col">-->
-<!--                        I will join Prof. Noah Snavely's group at the Google NYC office over the summer and continue working-->
-<!--                        on  deep learning for scene understanding and novel view synthesis.-->
-<!--                    </div>-->
-<!--                </div>-->
-
-
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
-
-                <!--- List of publications ---!>
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="groundplans/thumbnail.mp4" type="video/mp4">
-                        </video>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Seeing 3D Objects in a Single Image via Self-Supervised Static-Dynamic Disentanglement
-                        </div>
-                        <div class='paper-desc'>
-                            arXiv 2022
-                        </div>
-                        <div class='paper-authors'>
-                            Prafull Sharma, Ayush Tewari, Yilun Du, Sergey Zakharov, Rares Ambrus, Adrien Gaidon,
-                            William T. Freeman, Fredo Durand, Joshua B. Tenenbaum, Vincent Sitzmann
-                        </div>
-                        <div>
-                            <a href="https://prafullsharma.net/see3d/">[Project page]</a>
-                            <a href="https://prafullsharma.net/see3d/paper.pdf">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="feature-fields/thumbnail.mp4" type="video/mp4">
-                        </video>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                             Decomposing NeRF for Editing via Feature Field Distillation
-                        </div>
-                        <div class='paper-desc'>
-                            arXiv 2022
-                        </div>
-                        <div class='paper-authors'>
-                            Sosuke Kobayashi, Eiichi Matsumoto, Vincent Sitzmann
-                        </div>
-                        <div>
-                            <a href="https://pfnet-research.github.io/distilled-feature-fields/">[Project page]</a>
-                            <a href="https://arxiv.org/abs/2205.15585">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="ndfs/thumbnail.mp4" type="video/mp4">
-                        </video>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Neural Descriptor Fields: SE(3)-Equivariant Object Representations for Manipulation
-                        </div>
-                        <div class='paper-desc'>
-                            arXiv 2021
-                        </div>
-                        <div class='paper-authors'>
-                            Anthony Simeonov*, Yilun Du*, Andrea Tagliasacchi, Alberto Rodriguez, Pulkit Agrawal†, Vincent Sitzmann†
-                        </div>
-                        <div>
-                            <a href="https://yilundu.github.io/ndf/">[Project page]</a>
-                            <a href="https://arxiv.org/abs/2112.05124">[Paper]</a>
-                            <a href="https://github.com/anthonysimeonov/ndf_robot">[Code]</a>
-                            <a href="https://colab.research.google.com/drive/16bFIFq_E8mnAVwZ_V2qQiKp4x4D0n1sG?usp=sharing">[Colab]</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="imgs/gem_thumbnail.mp4" type="video/mp4">
-                        </video>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Learning Signal-Agnostic Manifolds of Neural Fields
-                        </div>
-                        <div class='paper-desc'>
-                            NeurIPS 2021
-                        </div>
-                        <div class='paper-authors'>
-                            Yilun Du, Katherine M. Collins, Joshua Tenenbaum, Vincent Sitzmann
-                        </div>
-                        <div>
-                            <a href="https://yilundu.github.io/gem/">[Project page]</a>
-                            <a href="https://arxiv.org/abs/2111.06387">[Paper]</a>
-                            <a href="https://github.com/yilundu/gem">[Code]</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
-                        </video>
-                    </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Light Field Networks: Neural Scene Representations with Single-Evaluation Rendering
-                        </div>
-                        <div class='paper-desc'>
-                            NeurIPS 2021 (Spotlight)
-                        </div>
-                        <div class='paper-authors'>
-                            Vincent Sitzmann*, Semon Rezchikov*, William T. Freeman, Joshua B. Tenenbaum, Frédo Durand
-                        </div>
-                        <div>
-                            <a href="https://vsitzmann.github.io/lfns">[Project page]</a>
-                            <a href=" http://arxiv.org/abs/2106.02634">[Paper]</a>
-                            <a href="https://github.com/vsitzmann/light-field-networks">[Code]</a>
-<!--                            <a href="https://colab.research.google.com/github/vsitzmann/siren/blob/master/explore_siren.ipynb">[Colab]</a>-->
-                        </div>
-                    </div>
-                </div>
-
-<!--                <div class='row vspace-top'>-->
-<!--                    <div class="col-sm-3">-->
-<!--                        <img src='imgs/deep_medial_fields.png' class='img-fluid'>-->
-<!--                    </div>-->
-
-<!--                    <div class="col">-->
-<!--                        <div class='paper-title'>-->
-<!--                            Deep Medial Fields-->
-<!--                        </div>-->
-<!--                        <div class='paper-desc'>-->
-<!--                            arXiv-->
-<!--                        </div>-->
-<!--                        <div class='paper-authors'>-->
-<!--                            Daniel Rebain, Ke Li, <u>Vincent Sitzmann</u>, Soroosh Yazdani, Kwang Moo Yi, Andrea Tagliasacchi-->
-<!--                        </div>-->
-<!--                        <div>-->
-<!--                            <a href="https://arxiv.org/abs/2106.03804">[Paper]</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
@@ -656,6 +406,4 @@
     <script src="js/bootstrap.min.js"></script>
 </body>
 
-
-<!-- Mirrored from www.vincentsitzmann.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Aug 2022 17:06:42 GMT -->
 </html>
