--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
-                    <img src='imgs/portrait.jpg' class='img-fluid' id='portrait'>
+                    <img src='imgs/portrait.png' class='img-fluid' id='portrait'>
                 </div>
 
                 <div class="col">
@@ -94,22 +94,22 @@
                       Landon Butler
                   </div>
                     <div id='header-text-title'>
-                        Assistant Professor </br>
-                        Principal investigator, <a href="https://www.scenerepresentations.org/">Scene Representation Group</a>
+                        Ph.D. Student </br>
                     </div>
                     <div id='header-text-affiliation'>
-                        MIT Department of <a href="https://www.eecs.mit.edu/">Electrical Engineering & Computer Science</a></br>
-                        <a href="https://www.csail.mit.edu/">Computer Science and Artificial Intelligence Laboratory</a> (CSAIL)
+                        Berkeley Department of <a href="https://eecs.berkeley.edu/">Electrical Engineering & Computer Science</a></br>
+                        <a href="https://bliss.eecs.berkeley.edu/">Berkeley Laboratory for Information and System Sciences</a> (BLISS)</br>
+                        <a href="https://bair.berkeley.edu/">Berkeley Artificial Intelligence Research</a> (BAIR)
                     </div>
                   <div id='header-text-email'>
-                        sitzmann (at) mit (dot) edu
+                        landonb (at) berkeley (dot) edu
                   </div>
                   <div>
-                    <a href="https://github.com/vsitzmann">[GitHub]</a>
-                    <a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&amp;hl=en&amp;oi=ao">[Google Scholar]</a>
-                    <a href="https://linkedin.com/in/vincentsitzmann">[LinkedIn]</a>
-                    <a href="https://twitter.com/vincesitzmann">[Twitter]</a>
-                    <a href="docs/cv_vincent_sitzmann_web.pdf">[Download CV]</a>
+                      <a href="docs/Landon Butler - CV.pdf">CV</a> |
+                      <a href="https://scholar.google.com/citations?user=ldjHUeEAAAAJ&hl=en">Google Scholar</a> |
+                      <a href="https://twitter.com/landon__butler?lang=en">Twitter</a> |
+                      <a href="https://drive.google.com/drive/folders/1KGvX3OkU8P8kZQ7BiKv26DMVkoRxyw3o?usp=sharing">NSF GRFP App</a> |
+
                   </div>
 
                 </div>
