--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Custom Styles -->
     <style>
           body {
-            font-family: Roboto, 'sans-serif';
+            font-family: 'sans-serif';
             font-size: 16px;
             background-color: #FFFFFF;
             color: #4F6071;
@@ -93,11 +93,12 @@
                   <div id='header-text-name'>
                       Landon Butler
                   </div>
-                    <div id='header-text-title'>
-                        Ph.D. Student </br>
-                    </div>
+                  <div id='header-text-title'>
+                      Ph.D. Student </br>
+                      University of California, Berkeley </br>
+                      Department of <a href="https://eecs.berkeley.edu/">Electrical Engineering & Computer Science</a></br>
+                  </div>
                     <div id='header-text-affiliation'>
-                        Berkeley Department of <a href="https://eecs.berkeley.edu/">Electrical Engineering & Computer Science</a></br>
                         <a href="https://bliss.eecs.berkeley.edu/">Berkeley Laboratory for Information and System Sciences</a> (BLISS)</br>
                         <a href="https://bair.berkeley.edu/">Berkeley Artificial Intelligence Research</a> (BAIR)
                     </div>
@@ -108,7 +109,7 @@
                       <a href="docs/Landon Butler - CV.pdf">CV</a> |
                       <a href="https://scholar.google.com/citations?user=ldjHUeEAAAAJ&hl=en">Google Scholar</a> |
                       <a href="https://twitter.com/landon__butler?lang=en">Twitter</a> |
-                      <a href="https://drive.google.com/drive/folders/1KGvX3OkU8P8kZQ7BiKv26DMVkoRxyw3o?usp=sharing">NSF GRFP App</a> |
+                      <a href="https://drive.google.com/drive/folders/1KGvX3OkU8P8kZQ7BiKv26DMVkoRxyw3o?usp=sharing">NSF GRFP App</a> 
 
                   </div>
 
