--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
+                        <img src='imgs/alg_signal_model.jpg' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -174,7 +174,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
+                        <img src='imgs/access_scores.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -188,14 +188,15 @@
                             Arnav Joshi, Andy Eskenazi, Landon Butler, and Megan Ryerson
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2205.03900">Paper</a>
+                            <a href="https://arxiv.org/abs/2205.03900">Paper</a> | 
+                            <a href="https://www.youtube.com/watch?v=KAAL5Fl3CAM">Video</a>
                         </div>
                     </div>
                 </div>
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
+                        <img src='imgs/lto_emissions.jpg' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -216,7 +217,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/srn_seg_repimage.jpg' class='img-fluid'>
+                        <img src='imgs/lc_tree.jpg' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -230,7 +231,8 @@
                             Ekaterina Tolstaya, Landon Butler, Daniel Mox, James Paulos, Vijay Kumar, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://ieeexplore.ieee.org/abstract/document/9636873">Paper</a>
+                            <a href="https://ieeexplore.ieee.org/abstract/document/9636873">Paper</a> |
+                            <a href="https://www.youtube.com/watch?v=UNBvsPZIudU">Video</a>
                         </div>
                     </div>
                 </div>
