--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/alg_signal_model.jpeg' class='img-fluid'>
+                        <img src='imgs/alg_signal_model.jpg' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -196,7 +196,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/lto_emissions.jpeg' class='img-fluid'>
+                        <img src='imgs/lto_emissions.jpg' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -217,7 +217,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/lc_tree.jpeg' class='img-fluid'>
+                        <img src='imgs/lc_tree.jpg' class='img-fluid'>
                     </div>
 
                     <div class="col">
