target blank for all hyperlinks

--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
                   <div id='header-text-title'>
                       Ph.D. Student </br>
                       University of California, Berkeley </br>
-                      Department of <a href="https://eecs.berkeley.edu/">Electrical Engineering & Computer Science</a></br>
+                      Department of <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering & Computer Science</a></br>
                   </div>
                     <div id='header-text-affiliation'>
-                        <a href="https://bliss.eecs.berkeley.edu/">Berkeley Laboratory for Information and System Sciences</a> (BLISS)</br>
-                        <a href="https://bair.berkeley.edu/">Berkeley Artificial Intelligence Research</a> (BAIR)
+                        <a href="https://bliss.eecs.berkeley.edu/" target="_blank">Berkeley Laboratory for Information and System Sciences</a> (BLISS)</br>
+                        <a href="https://bair.berkeley.edu/" target="_blank">Berkeley Artificial Intelligence Research</a> (BAIR)
                     </div>
                   <div id='header-text-email'>
                         landonb (at) berkeley (dot) edu
                   </div>
                   <div>
-                      <a href="docs/Landon Butler - CV.pdf">CV</a> |
-                      <a href="https://scholar.google.com/citations?user=ldjHUeEAAAAJ&hl=en">Google Scholar</a> |
-                      <a href="https://twitter.com/landon__butler?lang=en">Twitter</a> |
-                      <a href="https://drive.google.com/drive/folders/1KGvX3OkU8P8kZQ7BiKv26DMVkoRxyw3o?usp=sharing">NSF GRFP Application</a> 
+                      <a href="docs/Landon Butler - CV.pdf" target="_blank">CV</a> |
+                      <a href="https://scholar.google.com/citations?user=ldjHUeEAAAAJ&hl=en" target="_blank">Google Scholar</a> |
+                      <a href="https://twitter.com/landon__butler?lang=en" target="_blank">Twitter</a> |
+                      <a href="https://drive.google.com/drive/folders/1KGvX3OkU8P8kZQ7BiKv26DMVkoRxyw3o?usp=sharing" target="_blank">NSF GRFP Application</a> 
 
                   </div>
 
@@ -141,7 +141,7 @@
                 <p>
                     I am a first year Ph.D. student in EECS at Berkeley, advised by Kannan Ramchandran and supported by the NSF GRFP.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
-                    where I researched under the supervision of Alejandro Ribeiro. 
+                    where I researched under the supervision of Alejandro Ribeiro.
                     My research lies at the intersection of network science, machine learning, and game theory,
                     where I design mathematical and computational approaches to model, learn, and infer the dynamics of complex real-world systems.
                     I have applied this work to a diverse set of domains including aviation, social systems, and robotics.
@@ -149,6 +149,27 @@
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img src='imgs/wireless_fig.JPG' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Convolutional Learning on Multigraphs
+                        </div>
+                        <div class='paper-desc'>
+                            arXiv Preprint, 2022
+                        </div>
+                        <div class='paper-authors'>
+                            Landon Butler, Alejandro Parada-Mayorga, and Alejandro Ribeiro
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2108.09923" target="_blank">Paper</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class='row vspace-top'>
@@ -167,7 +188,7 @@
                             Alejandro Parada-Mayorga, Landon Butler, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2108.09923">Paper</a>
+                            <a href="https://arxiv.org/abs/2108.09923" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
@@ -188,8 +209,8 @@
                             Arnav Joshi, Andy Eskenazi, Landon Butler, and Megan Ryerson
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2205.03900">Paper</a> | 
-                            <a href="https://www.youtube.com/watch?v=KAAL5Fl3CAM">Video</a>
+                            <a href="https://arxiv.org/abs/2205.03900" target="_blank">Paper</a> |
+                            <a href="https://www.youtube.com/watch?v=KAAL5Fl3CAM" target="_blank">Video</a>
                         </div>
                     </div>
                 </div>
@@ -210,7 +231,7 @@
                             Andy Eskenazi, Landon Butler, Arnav Joshi, and Megan Ryerson
                         </div>
                         <div>
-                            <a href="https://www.icrat.org/previous-conferences/10th-international-conference/papers/">Paper</a>
+                            <a href="https://www.icrat.org/previous-conferences/10th-international-conference/papers/" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
@@ -231,8 +252,8 @@
                             Ekaterina Tolstaya, Landon Butler, Daniel Mox, James Paulos, Vijay Kumar, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://ieeexplore.ieee.org/abstract/document/9636873">Paper</a> |
-                            <a href="https://www.youtube.com/watch?v=UNBvsPZIudU">Video</a>
+                            <a href="https://ieeexplore.ieee.org/abstract/document/9636873" target="_blank">Paper</a> |
+                            <a href="https://www.youtube.com/watch?v=UNBvsPZIudU" target="_blank">Video</a>
                         </div>
                     </div>
                 </div>
