comment out paper

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I am a first year Ph.D. student in EECS at Berkeley, advised by Kannan Ramchandran and supported by the NSF GRFP.
+                    I am a first year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by the NSF GRFP.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
-                    where I researched under the supervision of Alejandro Ribeiro.
+                    where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
                     My research lies at the intersection of network science, machine learning, and game theory,
                     where I design mathematical and computational approaches to model, learn, and infer the dynamics of complex real-world systems.
                     I have applied this work to a diverse set of domains including aviation, social systems, and robotics.
@@ -150,7 +150,7 @@
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
-
+                <!--
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                         <img src='imgs/wireless_fig.JPG' class='img-fluid'>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-
+                -->
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                         <img src='imgs/alg_signal_model.JPG' class='img-fluid'>
@@ -267,9 +267,9 @@
     <div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+                <script src="../ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                <!-- Include all compiled plugins (below), or include individual files as needed -->
+                <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
