changed background image

--- a/index.html
+++ b/index.html
@@ -26,14 +26,9 @@
             font-size: 2rem;
         }
 
-        #header {
-            background-color: #f4f4f4;
-            /*background-color: #FFFFFF;*/
-            display: flex;
-            align-items: flex-end;
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
+    #header { background-color: #f4f4f4; background-image: url('imgs/network.png');
+              background-size: cover;
+              display: flex; align-items: flex-end; padding-top: 60px; padding-bottom: 60px; }
 
         #footer {
             background-color: #FFFFFF;
