added best paper awards

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         .paper-authors {
             font-style: italic;
         }
+
+        .paper-award {
+            color: #730000;
+        }
     </style>
 </head>
 
@@ -203,6 +207,9 @@
                         <div class='paper-authors'>
                             Arnav Joshi, Andy Eskenazi, Landon Butler, and Megan Ryerson
                         </div>
+                        <div class='paper-award'>
+                            Best Paper Award in the Climate and Transportation track
+                        </div>
                         <div>
                             <a href="https://arxiv.org/abs/2205.03900" target="_blank">Paper</a> |
                             <a href="https://www.youtube.com/watch?v=KAAL5Fl3CAM" target="_blank">Video</a>
@@ -224,6 +231,9 @@
                         </div>
                         <div class='paper-authors'>
                             Andy Eskenazi, Landon Butler, Arnav Joshi, and Megan Ryerson
+                        </div>
+                        <div class='paper-award'>
+                            Best Paper Award in the Economics, Policy, and Equity track
                         </div>
                         <div>
                             <a href="https://www.icrat.org/previous-conferences/10th-international-conference/papers/" target="_blank">Paper</a>
