added color to the underlying network

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             font-size: 2rem;
         }
 
-    #header { background-color: #f4f4f4; background-image: url('imgs/network.png');
+    #header { background-color: #f4f4f4; background-image: url('imgs/net_col_st.png');
               background-size: cover;
               display: flex; align-items: flex-end; padding-top: 60px; padding-bottom: 60px; }
 
