--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I am a first year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported an NSF Graduate Research Fellowship.
+                    I am a first year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
                     where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
                     My research lies at the intersection of network science, machine learning, and game theory,
@@ -208,7 +208,7 @@
                             Arnav Joshi, Andy Eskenazi, Landon Butler, and Megan Ryerson
                         </div>
                         <div class='paper-award'>
-                            Best Paper Award in the Climate and Transportation track
+                            Best Paper Award in Climate and Transportation
                         </div>
                         <div>
                             <a href="https://arxiv.org/abs/2205.03900" target="_blank">Paper</a> |
@@ -233,7 +233,7 @@
                             Andy Eskenazi, Landon Butler, Arnav Joshi, and Megan Ryerson
                         </div>
                         <div class='paper-award'>
-                            Best Paper Award in the Economics, Policy, and Equity track
+                            Best Paper Award in Economics, Policy, and Equity
                         </div>
                         <div>
                             <a href="https://www.icrat.org/previous-conferences/10th-international-conference/papers/" target="_blank">Paper</a>
