--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
                     I am a first year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
                     where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
-                    My research lies at the intersection of network science, machine learning, and game theory,
-                    where I design mathematical and computational approaches to model, learn, and infer the dynamics of complex real-world systems.
-                    I have applied this work to a diverse set of domains including aviation, social systems, and robotics.
+                    My research examines the theoretical foundations of machine learning and algorithmic decision-making in complex systems,
+                    leveraging tools from game theory, network science, and economics.
+                    I have applied this work to the design of markets, the restructuring of airline route networks, and wireless communications.
                 </p>
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
-                <!--
+
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/wireless_fig.JPG' class='img-fluid'>
+                        <img src='imgs/wf.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                 </div>
-                -->
+
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                         <img src='imgs/alg_signal_model.JPG' class='img-fluid'>
