--- a/index.html
+++ b/index.html
@@ -151,6 +151,27 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
+                        <img src='imgs/multigraph.png' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Learning with Multigraph Convolutional Filters
+                        </div>
+                        <div class='paper-desc'>
+                            arXiv Preprint, 2022
+                        </div>
+                        <div class='paper-authors'>
+                            Landon Butler, Alejandro Parada-Mayorga, and Alejandro Ribeiro
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2210.16272" target="_blank">Paper</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
                         <img src='imgs/wf.png' class='img-fluid'>
                     </div>
 
