--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
         .paper-award {
             color: #730000;
         }
+        #outer {
+            width: 100%;
+            text-align: center;
+        }
+
+        #inner {
+            display: inline-block;
+        }
     </style>
 </head>
 
@@ -286,9 +294,12 @@
             </div>
         </div>
     </div>
-
+    
 
     <div id='footer' class='vspace-top'>
+        <div id="outer">  
+            <div id="inner"><a href="https://info.flagcounter.com/bkwb"><img src="https://s01.flagcounter.com/mini/bkwb/bg_FFFFFF/txt_FFFFFF/border_FFFFFF/flags_0/" alt="Flag Counter" border="0"></a></div>
+        </div>
     <div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
