--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-212F1EPX32"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'G-212F1EPX32');
+        gtag('config', 'G-212F1EPX32');
     </script>
 
     <title>Landon Butler</title>
