--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-212F1EPX32"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDQMYJRVEP"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'G-212F1EPX32');
+    gtag('config', 'G-ZDQMYJRVEP');
     </script>
 
     <title>Landon Butler</title>
@@ -113,6 +113,7 @@
             display: inline-block;
         }
     </style>
+    <link rel="icon" href="imgs/favicon.png">
 </head>
 
 <body>
