--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             margin-top: 30px;
         }
 
+        .vspace-bottom {
+            margin-bottom: 30px;
+        }
+
         .vspace-top-news {
             margin-top: 15px;
         }
@@ -121,7 +125,7 @@
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
-                    <img src='imgs/portrait.png' class='img-fluid' id='portrait'>
+                    <img draggable="false" src='imgs/portrait.png' class='img-fluid' id='portrait'>
                 </div>
 
                 <div class="col">
@@ -152,7 +156,7 @@
 
 
     <div class='container'>
-        <div class='row vspace-top'>
+        <div class='row vspace-top vspace-bottom'>
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
@@ -170,7 +174,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/multigraph.png' class='img-fluid'>
+                        <img draggable="false" src='imgs/multigraph.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -191,7 +195,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/wf.png' class='img-fluid'>
+                        <img draggable="false" src='imgs/wf.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -212,7 +216,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/alg_signal_model.JPG' class='img-fluid'>
+                        <img draggable="false" src='imgs/alg_signal_model.JPG' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -233,7 +237,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/access_scores.png' class='img-fluid'>
+                        <img draggable="false" src='imgs/access_scores.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -258,7 +262,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/lto_emissions.JPG' class='img-fluid'>
+                        <img draggable="false" src='imgs/lto_emissions.JPG' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -282,7 +286,7 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img src='imgs/lc_tree.JPG' class='img-fluid'>
+                        <img draggable="false" src='imgs/lc_tree.JPG' class='img-fluid'>
                     </div>
 
                     <div class="col">
