--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             font-size: 2rem;
         }
 
+        a {
+            color: #3d62ae;
+        }
+
     #header { background-color: #f4f4f4; background-image: url('imgs/net_col_st.png');
               background-size: cover;
               display: flex; align-items: flex-end; padding-top: 60px; padding-bottom: 60px; }
@@ -182,7 +186,7 @@
                             Learning with Multigraph Convolutional Filters
                         </div>
                         <div class='paper-desc'>
-                            arXiv Preprint, 2022
+                            IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2023
                         </div>
                         <div class='paper-authors'>
                             Landon Butler, Alejandro Parada-Mayorga, and Alejandro Ribeiro
@@ -203,13 +207,13 @@
                             Convolutional Learning on Multigraphs
                         </div>
                         <div class='paper-desc'>
-                            arXiv Preprint, 2022
+                            IEEE Transactions on Signal Processing, 2023
                         </div>
                         <div class='paper-authors'>
                             Landon Butler, Alejandro Parada-Mayorga, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2209.11354" target="_blank">Paper</a>
+                            <a href="https://ieeexplore.ieee.org/abstract/document/10076894" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
