--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
                   </div>
                   <div>
                       <a href="docs/Landon Butler - CV.pdf" target="_blank">CV</a> |
-                      <a href="https://scholar.google.com/citations?user=ldjHUeEAAAAJ&hl=en" target="_blank">Google Scholar</a> |
-                      <a href="https://drive.google.com/drive/folders/1KGvX3OkU8P8kZQ7BiKv26DMVkoRxyw3o?usp=sharing" target="_blank">NSF GRFP Application</a> 
+                      <a href="https://scholar.google.com/citations?user=ldjHUeEAAAAJ&hl=en" target="_blank">Google Scholar</a> 
 
                   </div>
 
