--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <a href="https://bair.berkeley.edu/" target="_blank">Berkeley Artificial Intelligence Research</a> (BAIR)
                     </div>
                   <div id='header-text-email'>
-                        landonb (at) berkeley (dot) edu
+                        landonb@berkeley.edu
                   </div>
                   <div>
                       <a href="docs/Landon Butler - CV.pdf" target="_blank">CV</a> |
@@ -166,9 +166,7 @@
                     I am a first year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
                     where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
-                    My research examines the theoretical foundations of machine learning and algorithmic decision-making in complex systems,
-                    leveraging tools from game theory, network science, and economics.
-                    I have applied this work to the design of markets, the restructuring of airline route networks, and wireless communications.
+                    My research examines the theoretical foundations of online learning and algorithmic decision-making in complex systems, inspired by applications in market design and transportation.
                 </p>
 
                 <div class='vspace-top'>
@@ -191,7 +189,7 @@
                             Landon Butler, Alejandro Parada-Mayorga, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2210.16272" target="_blank">Paper</a>
+                            <a href="https://ieeexplore.ieee.org/document/10095028" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +210,7 @@
                             Landon Butler, Alejandro Parada-Mayorga, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://ieeexplore.ieee.org/abstract/document/10076894" target="_blank">Paper</a>
+                            <a href="https://ieeexplore.ieee.org/document/10076894" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
@@ -248,16 +246,19 @@
                             Equitable Optimization of U.S. Airline Route Networks
                         </div>
                         <div class='paper-desc'>
+                            Computers, Environment and Urban Systems, 2023
+                        </div>
+                        <div class='paper-desc'>
                             Andrew P. Sage Memorial Conference, 2022
                         </div>
                         <div class='paper-authors'>
                             Arnav Joshi, Andy Eskenazi, Landon Butler, and Megan Ryerson
                         </div>
                         <div class='paper-award'>
-                            Best Paper Award in Climate and Transportation
+                            Best Paper Award in Climate and Transportation (Sage)
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2205.03900" target="_blank">Paper</a> |
+                            <a href="https://www.sciencedirect.com/science/article/pii/S0198971523000364" target="_blank">Paper</a> |
                             <a href="https://www.youtube.com/watch?v=KAAL5Fl3CAM" target="_blank">Video</a>
                         </div>
                     </div>
