--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
                             Convolutional Filtering and Neural Networks with Non-Commutative Algebras
                         </div>
                         <div class='paper-desc'>
-                            arXiv Preprint, 2022
+                            IEEE Transactions on Signal Processing, 2023
                         </div>
                         <div class='paper-authors'>
                             Alejandro Parada-Mayorga, Landon Butler, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2108.09923" target="_blank">Paper</a>
+                            <a href="https://ieeexplore.ieee.org/document/10183724" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
