updated for summer 2024

--- a/index.html
+++ b/index.html
@@ -163,16 +163,36 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I am a second year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
+                    I am a third year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
                     where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
-                    My research lies at the intersection of machine learning, signal processing, and game theory, inspired by applications in market design and transportation.
+                    My research lies at the intersection of machine learning, signal processing, and game theory, inspired by applications in economics and transportation.
                 </p>
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
 
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img draggable="false" src='imgs/interactions.png' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Learning to Understand: Identifying Interactions via the Möbius Transform
+                        </div>
+                        <div class='paper-desc'>
+                            ArXiv, 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Justin Singh Kang, Yigit Efe Erginbas, Landon Butler, Ramtin Pedarsani, and Kannan Ramchandran
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2402.02631" target="_blank">Paper</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
