--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
-                    <img draggable="false" src='imgs/portrait.png' class='img-fluid' id='portrait'>
+                    <img draggable="false" src='imgs/portrait.jpg' class='img-fluid' id='portrait'>
                 </div>
 
                 <div class="col">
@@ -183,7 +183,7 @@
                             Learning to Understand: Identifying Interactions via the Möbius Transform
                         </div>
                         <div class='paper-desc'>
-                            ArXiv, 2024
+                            NeurIPS, 2024
                         </div>
                         <div class='paper-authors'>
                             Justin Singh Kang, Yigit Efe Erginbas, Landon Butler, Ramtin Pedarsani, and Kannan Ramchandran
