--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             Learning to Understand: Identifying Interactions via the Möbius Transform
                         </div>
                         <div class='paper-desc'>
-                            ArXiv, 2024
+                            NeurIPS, 2024
                         </div>
                         <div class='paper-authors'>
                             Justin Singh Kang, Yigit Efe Erginbas, Landon Butler, Ramtin Pedarsani, and Kannan Ramchandran
