Added new paper

--- a/index.html
+++ b/index.html
@@ -171,6 +171,27 @@
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
+
+                </div>
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img draggable="false" src='imgs/spex.png' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            SPEX: Scaling Feature Interaction Explanations for LLMs
+                        </div>
+                        <div class='paper-desc'>
+                            ArXiv, 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Justin Singh Kang*, Landon Butler*, Abhineet Agarwal*, Yigit Efe Erginbas, Ramtin Pedarsani, Kannan Ramchandran, and Bin Yu
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2502.13870" target="_blank">Paper</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class='row vspace-top'>
