Added new paper

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img draggable="false" src='imgs/spex.png' class='img-fluid'>
+                        <img draggable="false" src='imgs/trolley.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
