Added new paper

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             Justin Singh Kang, Yigit Efe Erginbas, Landon Butler, Ramtin Pedarsani, and Kannan Ramchandran
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2402.02631" target="_blank">Paper</a>
+                            <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/520b379123d16e41f85472e766846486-Abstract-Conference.html" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
