updated bio / cv

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     I am a third year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
                     where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
-                    My research lies at the intersection of machine learning, signal processing, and game theory, inspired by applications in economics and transportation.
+                    My research lies at the intersection of machine learning, signal processing, and game theory, inspired by applications in interpretability of foundation models.
                 </p>
 
                 <div class='vspace-top'>
